#47, #67 factored out the source for help text

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ HELP-US-OUT.txt
 build.js
 x.json
 launch.json
+30_sources/SRC_Zupfnoter/src/x.locales.template
+30_sources/SRC_Zupfnoter/src/xxx.html
+30_sources/SRC_Zupfnoter/src/xxx.md
