--- a/ZSUPP_Manifests/UD_zupfnoter.yaml
+++ b/ZSUPP_Manifests/UD_zupfnoter.yaml
@@ -29,6 +29,7 @@
         - ../UD_Zupfnoter-Handbuch/060_UD_Zupfnoter-best-practice.md
         - ../UD_Zupfnoter-Handbuch/080_UD_Zupfnoter-ABC-tutorial.md
         - ../UD_Zupfnoter-Handbuch/090_UD_Zupfnoter-Konfiguration.md
+        - ../UD_Zupfnoter-Handbuch/part_index.md
     :forget:
         - ../UD_Abc-Notation/abc-notation-1.md
         - ../UD_Abc-Notation/abc-notation-2.md
