#47, #67 some fixes in help texts
declared as 1.5.0 dev 2 and published on xpzupfnoter

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -126,6 +126,10 @@ task :deploy => [:build] do
     cp f, "#{OUTFOLDER}/webserver/public/locale/#{File.basename(f)}"
   end
 
+  Dir["../public/*.pdf"].each do |f|
+    cp f, "#{OUTFOLDER}/webserver/public/#{File.basename(f)}"
+  end
+
   cp "../vendor/ace/ace.js", "#{OUTFOLDER}/webserver/vendor/ace/ace.js"
   cp "../vendor/ace/mode-abc.js", "#{OUTFOLDER}/webserver/vendor/ace/mode-abc.js"
   cp "../vendor/ace/theme-abc.js", "#{OUTFOLDER}/webserver/vendor/ace/theme-abc.js"
