--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -252,6 +252,7 @@ end
 
 desc "config doc and help"
 task :buildConfigDoc do
+  sh 'wortsammler -bi localization/help_de-de.md'
   sh 'ruby conf_doc_source.rb'
   sh 'pandoc xxx.md -o xxx.html --standalone'
 end
