clarify the usage of meatjson between server, builder, and build.js * server and build.js include neatjson_js * Makefile  conf_doc_source.rb use neatjson via gem and bundler

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -5,7 +5,7 @@ require 'erb'
 require 'zip'
 require 'net/http'
 require 'pry'
-require './neatjson.rb'
+require 'neatjson.rb'
 
 HTMLTEMPLATE = "../index_opal.html.erb"
 PACKAGE_JSON = "../package.json"
