Integrate build of user manual to the rake src/Rakefile

--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -13,5 +13,5 @@ gem 'graphviz'
 gem 'bundler'
 gem 'redcarpet'
 gem 'json-schema-generator'
-gem 'wortsammler'
+gem 'wortsammler', "~> 1.0.2"
 gem 'neatjson'
