--- a/30_sources/ZSUPP_Manifests/UD_zupfnoter.yaml
+++ b/30_sources/ZSUPP_Manifests/UD_zupfnoter.yaml
@@ -27,6 +27,7 @@
         - ../UD_Zupfnoter-Handbuch/060_UD_Zupfnoter-best-practice.md
         - ../UD_Zupfnoter-Handbuch/080_UD_Zupfnoter-ABC-tutorial.md
         - ../UD_Zupfnoter-Handbuch/090_UD_Zupfnoter-Konfiguration.md
+        - ../UD_Zupfnoter-Handbuch/095_UD_Zupfnoter-Historie.md
         - ../UD_Zupfnoter-Handbuch/part_index.md
     :forget:
         - ../UD_Abc-Notation/abc-notation-1.md
