--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -9,7 +9,7 @@ gem 'opal', '~> 0.9.0'
 gem 'opal-jquery', '~> 0.4.0'
 gem 'vector2d', "~> 2.1.0"
 gem 'pry'
-gem 'pry-byebug'  # for debugging on ruby lavel
+#gem 'pry-byebug'  # for debugging on ruby lavel
 gem 'graphviz'
 gem 'bundler'
 gem 'redcarpet'
