--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -22,7 +22,7 @@ ACE_REPO     = "../../../../200_zupfnoter_external_components/ace"
 desc "update public/locale"
 task :updateLocales do
   puts "updating locales"
-  locales = Dir["#{LOCALEPATH}??-??.json"].map { |f| f.split(LOCALEPATH).last }
+  locales = Dir["#{LOCALEPATH}??-??.json"].map {|f| f.split(LOCALEPATH).last}
   locales.each do |locale|
     w2uilocalefile    = File.open("#{VENDORFOLDER}/w2ui/dist/#{locale}")
     znlocalefile      = File.open("localization/zupfnoter_#{locale}")
@@ -34,7 +34,7 @@ task :updateLocales do
 
     w2uilocales['phrases'].merge!(znlocales['phrases'])
     w2uilocales['phrases'].merge!(abc2svglocales['phrases'])
-    File.open("#{LOCALEPATH}/#{locale}", "w") { |f| f.puts JSON.neat_generate(w2uilocales, {wrap: 180, after_colon: 1}) }
+    File.open("#{LOCALEPATH}/#{locale}", "w") {|f| f.puts JSON.neat_generate(w2uilocales, {wrap: 180, after_colon: 1})}
   end
 end
 
@@ -46,6 +46,23 @@ task :updateAbc2svg do
   File.open("#{VENDORFOLDER}/#{abc2svg_file}", "w") do |f|
     sources.each do |s|
       f.puts Net::HTTP.get(URI("http://moinejf.free.fr/js/#{s}"))
+    end
+  end
+end
+
+desc "Update abc2svg from git clone"
+task :updateAbc2svgDev do
+  abc2svgrepo = "../../../../200_zupfnoter_external_components/abc2svg"
+  abc2svg_file = "abc2svg-1.js"
+  sources      = [abc2svg_file, "json-1.js", "midi-1.js"]
+  cd abc2svgrepo do
+    sources.each {|f| sh  " rm #{f} ; NOMIN=1 ./ninja #{f}"}
+  end
+
+  File.open("#{VENDORFOLDER}/#{abc2svg_file}", "w") do |f|
+    [sources].flatten.each do |s|
+      puts "copying #{s}"
+      f.puts File.read("#{abc2svgrepo}/#{s}")
     end
   end
 end
@@ -107,7 +124,7 @@ task :deploy => [:build] do
     mkdir_p("#{OUTFOLDER}/webserver/#{d}")
   end
 
-  Dir["../vendor/*.*"].each { |f|
+  Dir["../vendor/*.*"].each {|f|
     cp f, "#{OUTFOLDER}/webserver/vendor/#{f}" unless File.directory?(f)
   }
 
@@ -115,9 +132,9 @@ task :deploy => [:build] do
   #cp ZUPFNOTER_JS, "#{OUTFOLDER}/webserver/public/#{ZUPFNOTER_JS}"
 
 
-  Dir['../vendor/font-awesome/css/*.*', '../vendor/font-awesome/fonts/*.*'].each { |f| cp f, "#{OUTFOLDER}/webserver/vendor/#{f.split('vendor/').last}" }
+  Dir['../vendor/font-awesome/css/*.*', '../vendor/font-awesome/fonts/*.*'].each {|f| cp f, "#{OUTFOLDER}/webserver/vendor/#{f.split('vendor/').last}"}
 
-  ['w2ui.min.css', 'w2ui.min.js'].each { |f| cp "../vendor/w2ui/dist/#{f}", "#{OUTFOLDER}/webserver/vendor/w2ui/dist/#{f}" }
+  ['w2ui.min.css', 'w2ui.min.js'].each {|f| cp "../vendor/w2ui/dist/#{f}", "#{OUTFOLDER}/webserver/vendor/w2ui/dist/#{f}"}
 
 
   cp "../public/index.css", "#{OUTFOLDER}/webserver/public/index.css"
@@ -144,7 +161,7 @@ task :deploy => [:build] do
   cp("../vendor/ace/snippets/abc.js", "#{OUTFOLDER}/webserver/vendor/ace/snippets/abc.js")
   cp("../vendor/ace/snippets/markdown.js", "#{OUTFOLDER}/webserver/vendor/ace/snippets/markdown.js")
   cp("../vendor/abc2svg-1.js", "#{OUTFOLDER}/vendor/abc2svg-1.js")
-  Dir['../vendor/ace/ext-*.*'].each { |f| cp f, "#{OUTFOLDER}/webserver/vendor/#{f.split('vendor/').last}" }
+  Dir['../vendor/ace/ext-*.*'].each {|f| cp f, "#{OUTFOLDER}/webserver/vendor/#{f.split('vendor/').last}"}
 
   def javascript_include_tag(filename)
     "<script src = \"public/#{ZUPFNOTER_JS}?#{GITSHA}\" type=\"application/javascript\"></script>"
@@ -210,15 +227,15 @@ task :buildDesktop => [:build] do
   sh "./node_modules/uglify-js/bin/uglifyjs -c -m -o #{zupfnoter_compressedjs_filename} #{ZUPFNOTER_JS}"
   #copy(ZUPFNOTER_JS, zupfnoter_compressedjs_filename)
 
-  Dir["../vendor/*.*"].each { |f|
+  Dir["../vendor/*.*"].each {|f|
     copy(f, "#{desktop_stage}/vendor/#{f}")
   }
 
-  Dir['../vendor/font-awesome/css/*.*', '../vendor/font-awesome/fonts/*.*'].each { |f| cp f, "#{desktop_stage}/vendor/#{f.split('vendor/').last}" }
+  Dir['../vendor/font-awesome/css/*.*', '../vendor/font-awesome/fonts/*.*'].each {|f| cp f, "#{desktop_stage}/vendor/#{f.split('vendor/').last}"}
 
-  ['w2ui.min.css', 'w2ui.min.js'].each { |f| cp "../vendor/w2ui/dist/#{f}", "#{desktop_stage}/vendor/w2ui/dist/#{f}" }
+  ['w2ui.min.css', 'w2ui.min.js'].each {|f| cp "../vendor/w2ui/dist/#{f}", "#{desktop_stage}/vendor/w2ui/dist/#{f}"}
 
-  Dir["../public/locale/*.*"].each { |f|
+  Dir["../public/locale/*.*"].each {|f|
     copy(f, "#{desktop_stage}/public/locale/")
   }
 
@@ -261,11 +278,11 @@ task :buildUserManual do
 
   require "#{File.dirname(__FILE__)}/version.rb"
   File.open("../../UD_Zupfnoter-Handbuch/000_UD-Zupfnoter-Version.md", "w") do |f|
-     f.puts (%Q{
+    f.puts (%Q{
 Version #{VERSION}
 
-#{COPYRIGHT}
-     })
+    #{COPYRIGHT}
+    })
   end
 
   cd "../../ZSUPP_Tools" do
