updated Raketask for deployment of #126 updated changes for #172

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -129,7 +129,7 @@ task :deploy => [:build] do
 
   # prepare all requested folders
   # todo:this is not dry - see buildDesktop
-  ["public/icons", "public/demos", "public/locale",
+  ["public/icons", "public/demos", "public/locale", "public/soundfont/FluidR3_GM",
    "vendor/ace", "vendor/ace/snippets", "vendor/w2ui", "vendor/w2ui/dist",
    "vendor/font-awesome/css", "vendor/font-awesome/fonts",
   ].each do |d|
@@ -162,6 +162,10 @@ task :deploy => [:build] do
 
   Dir["../public/*.pdf"].each do |f|
     cp f, "#{OUTFOLDER}/webserver/public/#{File.basename(f)}"
+  end
+
+  Dir["../public/soundfont/FluidR3_GM/*"].each do |f|
+    cp f, "#{OUTFOLDER}/webserver/public/soundfont/FluidR3_GM/#{File.basename(f)}"
   end
 
   cp "../vendor/ace/ace.js", "#{OUTFOLDER}/webserver/vendor/ace/ace.js"
