updated manual for prerelease

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ launch.json
 30_sources/SRC_Zupfnoter/src/x.locales.template
 30_sources/SRC_Zupfnoter/src/xxx.html
 30_sources/SRC_Zupfnoter/src/xxx.md
+.idea.outdated
