--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -1,11 +1,12 @@
 #Gemfile
 source 'https://rubygems.org'
+ruby "2.4.1"
 
 gem 'rake'
 gem 'sass'
 gem 'zip'
 #gem 'prmd'
-gem 'opal', '~> 0.9.0'
+gem 'opal', '~> 0.10.5'
 gem 'opal-jquery', '~> 0.4.0'
 gem 'vector2d', "~> 2.1.0"
 gem 'pry'
