--- a/30_sources/SRC_Zupfnoter/src/package.json
+++ b/30_sources/SRC_Zupfnoter/src/package.json
@@ -7,14 +7,16 @@
     "doc": "doc"
   },
   "dependencies": {
-    "ajv": "^5.5.1",
+    "ajv": "^4.8.2",
     "blob": "^0.0.4",
     "encoding": "^0.1.12",
     "glob": "^7.1.2",
     "jspdf": "^1.3.5",
     "uglify-js": "^2.4.16"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "uglify-js": "^2.8.29"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
