#203 let version.rb be generated but not tracked by git

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ launch.json
 30_sources/SRC_Zupfnoter/src/xxx.html
 30_sources/SRC_Zupfnoter/src/xxx.md
 .idea.outdated
+30_sources/SRC_Zupfnoter/src/version-prod.rb
