#203 let also generate version of manual

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ launch.json
 30_sources/SRC_Zupfnoter/src/xxx.md
 .idea.outdated
 30_sources/SRC_Zupfnoter/src/version-prod.rb
+30_sources/UD_Zupfnoter-Handbuch/000_UD-Zupfnoter-Version.md
