--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -6,8 +6,11 @@ gem 'rake'
 gem 'sass'
 gem 'zip'
 #gem 'prmd'
-gem 'opal', '~> 0.10.6'
-gem 'opal-jquery', '~> 0.4.2'
+
+gem 'opal', '~> 0.11'
+gem 'opal-sprockets'
+gem 'opal-jquery', git: "https://github.com/opal/opal-jquery"
+
 gem 'vector2d', "~> 2.1.0"
 gem 'pry'
 #gem 'pry-byebug'  # for debugging on ruby lavel
