--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -1,6 +1,6 @@
 #Gemfile
 source 'https://rubygems.org'
-ruby "2.4.1"
+ruby "~>2.4.1"
 
 gem 'rake'
 gem 'sass'
@@ -15,5 +15,11 @@ gem 'graphviz'
 gem 'bundler'
 gem 'redcarpet'
 gem 'json-schema-generator'
-gem 'wortsammler', "~> 1.0.2"
 gem 'neatjson'
+
+
+# had trouble to install nokogiri on windows
+# so I build the manual on mac os only
+install_if -> { RUBY_PLATFORM =~ /darwin/ } do
+  gem 'wortsammler', "~> 1.0.2"
+end
