--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -46,7 +46,7 @@ task :updateAbc2svg do
   abc2svg_file = "abc2svg-1.js"
   sources      = [abc2svg_file, "json-1.js", "setmidi-1.js", "play-1.js"]
   ignore       = ['wps-1.js']
-  temp_ignore  = []
+  temp_ignore  = ['psvg-1.js']
   sources      += Dir["#{abc2svgrepo}/modules/*.js"].map { |f| File.basename(f, '.js') + "-1.js" } - temp_ignore - ignore # add failing modules to [] to ignore them
 
   cd abc2svgrepo do
