--- a/30_sources/SRC_Zupfnoter/src/package.json
+++ b/30_sources/SRC_Zupfnoter/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zupfnoter",
-  "version": "1.8.1",
+  "version": "1.9.2",
   "description": "This is the commandline zupfnoter",
   "main": "zupfnoter-cli.js",
   "directories": {
@@ -11,11 +11,11 @@
     "blob": "^0.0.4",
     "encoding": "^0.1.12",
     "glob": "^7.1.2",
-    "jspdf": "^1.3.5",
-    "uglify-js": "^2.4.16"
+    "jspdf": "^1.4.1"
   },
   "devDependencies": {
-    "uglify-js": "^2.8.29"
+    "uglify-js": "^2.8.29",
+    "browserify": "^14.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
