--- a/30_sources/SRC_Zupfnoter/src/package.json
+++ b/30_sources/SRC_Zupfnoter/src/package.json
@@ -10,8 +10,8 @@
     "ajv": "^4.8.2",
     "blob": "^0.0.4",
     "encoding": "^0.1.12",
-    "glob": "^7.1.2",
-    "jspdf": "^1.3.5",
+    "glob": "^7.1.3",
+    "jspdf": "~1.3.5",
     "uglify-js": "^2.4.16"
   },
   "devDependencies": {
