see #209 removed some duplicate keys in hashes, detected by opal 1.11

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -116,7 +116,7 @@ task :build => [:buildConfigDoc, :updateLocales] do
 
   Dir.glob "../public/*.scss" do |f|
     cmd = "sass #{f} > #{File.dirname(f)}/#{File.basename(f, ".scss")}.css"
-    puts sh cmd
+    puts sh cmd  # todo: improve error messages
   end
 end
 
