see #237 now perform nam install to get the right version of jspdf
note that build_cli takes it from node modules while the web app takes it from vendor

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -236,6 +236,8 @@ task :build_cli do #=> [:build] do
   # ajv
 
 
+  sh 'npm install'
+
   File.open(ZUPFNOTER_CLI_JS, "w+") do |out|
     #   out << env["application"].to_s
     #   out << Opal::Processor.load_asset_code(env, 'application')
